# wulfaz

./: .gitignore  .golangci.yml  CLAUDE.md  Cargo.toml  DESIGN.md  FEATURES.md  LICENSE  NOTICE  NOTICES  RULES.md  WAVES.md  claude_proposal.md  go.mod  go.sum  roguelike-design.md  tea-go-ruleset.md
.workflow/: SURVIVAL_MIGRATION.md  SURVIVAL_SPEC_B0_B1.md  architecture.md  audit-ui-511-reexports.md  b03-design.md  b05-design.md  backlog.md  checkpoint.md  ck3-gui-shared-index.md  ck3-ui-reference.md  features.md  panel-frame-definition.md  perf-decisions-design.md  phases.md  progress.jsonl  prompt-gap-fill.md  ui-architecture-migration.md  ui-architecture-patterns.md  ui-review-ck3.md  ui-review-conversation-index.md  ui-review-gap-report.md  ui-review-skipped-items.md
.workflow/claude-md-refine/: phase0-principles.md  phase0-raw.md  phase1-verdicts.md  phase2-reconciled.md  phase3-final-verdicts.md
.workflow/dialectic/: agent1_formalist.md  (+15 more)
ascii-renderer/: LICENSE  README.md  pyproject.toml
ascii-renderer/ascii_renderer/: __init__.py  __main__.py  cli.py  color.py  contrast.py  lookup.py  processor.py  render_image.py  shape.py
ascii-renderer/tests/: test_core.py
data/: archetypes.kdl  creatures.kdl  items.kdl  terrain.kdl  utility.ron
src/: components.rs  events.rs  font.rs  lib.rs  linebreak_table.rs  loading.rs  loading_gis.rs  lod.rs  main.rs  panel.rs  panel.wgsl  registry.rs  render.rs  rng.rs  settings.rs  sprite.wgsl  sprite_renderer.rs  text.wgsl  tile_map.rs  world.rs
tests/: determinism.rs  invariants.rs
website/: README.md  package.json
(+132 files in other folders)
