[package]
name = "wulfaz"
version = "0.1.0"
edition = "2024"

[dependencies]
wgpu = "24"
winit = "0.30"
pollster = "0.4"
env_logger = "0.11"
log = "0.4"
freetype-rs = "0.38"
bytemuck = { version = "1", features = ["derive"] }
kdl = "6.5.0"
rand = "0.10.0"
serde = { version = "1", features = ["derive"] }
ron = "0.9"
shapefile = "0.7"
